examples/k8s.namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kube-system
  labels:
    name: kube-system
